# selenium-starter-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  browser_automation.py  config_manager.py
src/pages/: __init__.py  base_page.py  google_pages.py
tests/: conftest.py  test_google_search.py  test_with_page_objects.py
